# mnemosyne

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  site.yml
docs/: demo-script.md  integrations.md  memo.md  ontology-coverage.md  show-hn.md
examples/: demo.py
site/: index.html
src/mnemosyne/: __init__.py  canonical_service.py  config.py  fabric.py  matching.py  mcp_server.py  models.py  ontology.py  resolution.py  temporal.py
src/mnemosyne/seed/: canonical_entities.json  coverage.py  loader.py  ontology_types.json  wikidata.py
src/mnemosyne/storage/: __init__.py  base.py  http_canonical.py  schema.py  sqlite_canonical.py  sqlite_common.py  sqlite_overlay.py
tests/: conftest.py  test_canonical_service.py  test_continuity_e2e.py  test_fabric.py  test_http_canonical.py  test_matching.py  test_mcp_e2e.py  test_ontology.py  test_resolution.py  test_seed_import.py  test_storage.py  test_temporal.py
