[project]
name = "mnemosyne-fabric"
version = "0.1.0"
description = "Ontology-native memory fabric for AI assistants: canonical entities, typed relationships, temporal state, and provenance behind an MCP server."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Jeremy Nelson" }]
keywords = [
    "mcp",
    "memory",
    "ontology",
    "knowledge-graph",
    "ai-assistant",
    "provenance",
    "temporal",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database",
    "Typing :: Typed",
]
dependencies = [
    "mcp>=1.2.0",
    "pydantic>=2.7",
    "rapidfuzz>=3.9",
    "httpx>=0.27",
    "starlette>=0.40",
    "uvicorn>=0.30",
]

[project.urls]
Homepage = "https://github.com/jerednel/mnemosyne"
Repository = "https://github.com/jerednel/mnemosyne"
Documentation = "https://github.com/jerednel/mnemosyne/blob/main/docs/integrations.md"
Issues = "https://github.com/jerednel/mnemosyne/issues"

[project.optional-dependencies]
embeddings-local = ["fastembed>=0.3"]

[project.scripts]
mnemosyne-server = "mnemosyne.mcp_server:main"
mnemosyne-seed = "mnemosyne.seed.loader:main"
mnemosyne-canonical = "mnemosyne.canonical_service:main"
mnemosyne-import = "mnemosyne.seed.wikidata:main"
mnemosyne-coverage = "mnemosyne.seed.coverage:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mnemosyne"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
